src: add gitlab service
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_paste/templates/paste.toml.j2
+++ b/roles/start_paste/templates/paste.toml.j2
@@ -15,8 +15,9 @@
         "security_headers",
         "paste_auth"
       ]
-      [http.routers.paste_https_PUT.tls]
+      [http.routers.paste_https_POST.tls]
         certResolver = "sadm_tlschallenge"
+
     [http.routers.paste_https]
       rule = "Host(`paste.{{ tld }}`)"
       entryPoints = "https"
