secrets: rework secrets file layout
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_files/templates/files.toml.j2
+++ b/roles/start_files/templates/files.toml.j2
@@ -5,7 +5,7 @@
   [http.middlewares]
     [http.middlewares.files_auth]
       [http.middlewares.files_auth.basicAuth]
-        users = "{{ secrets.basic_auth.files }}" 
+        users = "{{ secrets.files.auth_token }}" 
   [http.routers]
     [http.routers.files_https_PUT]
       rule = "Host(`files.{{ tld }}`) && Method(`PUT`)"
