--- a/roles/start_wireguard/templates/client.conf.j2
+++ b/roles/start_wireguard/templates/client.conf.j2
@@ -5,6 +5,6 @@ DNS = 1.1.1.1,1.0.0.1
 
 [Peer]
 PublicKey = {{ secrets.wireguard_server.public_key }}
-PresharedKey = {{ item.shared_psk }}
+PresharedKey = {{ item.preshared_key }}
 Endpoint = vpn.{{ tld }}:51820
 AllowedIPs = 0.0.0.0/0
