--- a/roles/start_traefik/templates/static.toml.j2
+++ b/roles/start_traefik/templates/static.toml.j2
@@ -3,7 +3,9 @@
   sendAnonymousUsage = false
 
 [accesslog]
-  filePath = "{{ volumes.prefix }}/traefik/data/access.log"
+  filePath = """{{ services.volumes.dest.base }}\
+                {{ services.containers.traefik.volumes.data.path }}\
+                /access.log"""
   bufferingSize = 100
 
 [api]
@@ -12,14 +14,17 @@
 
 [providers]
   [providers.file]
-    directory = "{{ volumes.prefix }}/traefik/dynamic"
+    directory = """{{ services.volumes.dest.base }}\
+                   {{ services.containers.traefik.volumes.dynamic.path }}"""
     watch = true
 
 [certificatesResolvers]
   [certificatesResolvers.sadm_tlschallenge]
     [certificatesResolvers.sadm_tlschallenge.acme]
-      email = "{{ admin_email }}"
-      storage = "{{ volumes.prefix }}/traefik/data/acme.json"
+      email = "{{ setup.admin_email }}"
+      storage = """{{ services.volumes.dest.base }}\
+                   {{ services.containers.traefik.volumes.data.path }}\
+                   /acme.json"""
       keyType = "EC384"
     [certificatesResolvers.sadm_tlschallenge.acme.tlsChallenge]
 
