--- a/roles/start_wireguard/templates/client.conf.j2
+++ b/roles/start_wireguard/templates/client.conf.j2
@@ -4,7 +4,7 @@ Address = {{ item.address }}
 DNS = 1.1.1.1,1.0.0.1
 
 [Peer]
-PublicKey = {{ secrets.wireguard_server.public_key }}
+PublicKey = {{ secrets.wireguard.server.public_key }}
 PresharedKey = {{ item.preshared_key }}
-Endpoint = vpn.{{ tld }}:51820
+Endpoint = vpn.{{ setup.tld }}:51820
 AllowedIPs = 0.0.0.0/0
