--- a/roles/start_wireguard/templates/wireguard.toml.j2
+++ b/roles/start_wireguard/templates/wireguard.toml.j2
@@ -1,7 +1,7 @@
 [udp]
   [udp.services]
     [[udp.services.wireguard.loadBalancer.servers]]
-      address = "wireguard:51820"
+      address = "{{ services.containers.wireguard.name }}:51820"
   [udp.routers]
     [udp.routers.wireguard]
       entryPoints = [
