matrix: setup CORS headers for delegation
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_matrix/templates/synapse-federation.toml.j2
+++ b/roles/start_matrix/templates/synapse-federation.toml.j2
@@ -11,7 +11,8 @@
       service = "synapse_federation"
       priority = 500
       middlewares = [
-        "security_headers"
+        "security_headers",
+        "cors_headers"
       ]
       [http.routers.synapse_federation_https.tls]
         certResolver = "sadm_tlschallenge"
