--- a/roles/start_matrix/templates/homeserver.yaml.j2
+++ b/roles/start_matrix/templates/homeserver.yaml.j2
@@ -1373,8 +1373,10 @@ report_stats: false
 
 # A list of application service config files to use
 #
-#app_service_config_files:
-#  - app_service_1.yaml
+app_service_config_files:
+  - "/registration/facebook/registration.yaml"
+  - "/registration/telegram/registration.yaml"
+  - "/registration/whatsapp/registration.yaml"
 #  - app_service_2.yaml
 
 # Uncomment to enable tracking of application service IP addresses. Implicitly
