matrix: facebook bridge reconnects on failure
Signed-off-by: Gabriel Duque <gabriel@zuh0.com>

--- a/roles/start_matrix/templates/facebook_config.yaml.j2
+++ b/roles/start_matrix/templates/facebook_config.yaml.j2
@@ -208,7 +208,7 @@ bridge:
     temporary_disconnect_notices: true
     # Whether or not the bridge should try to "refresh" the connection if a normal reconnection
     # attempt fails.
-    refresh_on_reconnection_fail: false
+    refresh_on_reconnection_fail: true
     # Set this to true to tell the bridge to re-send m.bridge events to all rooms on the next run.
     # This field will automatically be changed back to false after it,
     # except if the config file is not writable.
