--- a/roles/start_matrix/templates/bot_config.yaml.j2
+++ b/roles/start_matrix/templates/bot_config.yaml.j2
@@ -62,8 +62,8 @@ registration_secrets:
 # List of administrator users. Plaintext passwords will be bcrypted on startup. Set empty password
 # to prevent normal login. Root is a special user that can't have a password and will always exist.
 admins:
-    root: ""
-    {{ services.containers.synapse.admin }}: '{{ secrets.matrix.bot.admin_passwd }}'
+    root: ''
+    {{ services.containers.synapse.admin }}: {{ secrets.matrix.bot.admin_passwd }}
 
 # API feature switches.
 api_features:
@@ -86,7 +86,7 @@ logging:
     version: 1
     formatters:
         precise:
-            format: "[%(asctime)s] [%(levelname)s@%(name)s] %(message)s"
+            format: '[%(asctime)s] [%(levelname)s@%(name)s] %(message)s'
     handlers:
         file:
             class: logging.handlers.RotatingFileHandler
